Modified the admin side

--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -194,7 +194,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <button class="update-category-btn" 
-                                                                        onClick="openUpdateModal('<%= category._id %>', '<%= category.categoryName %>', '<%= category.categoryDescription %>')">
+                                                                        onClick="openUpdateModal('<%= category._id %>', '<%= category.categoryName %>', '<%= category.categoryDescription %>',)">
                                                                         Update Category
                                                                     </button>
                                                                 </td>
