--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
                             <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
                             <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist <span>(0)</span></a></li>
                             <li><a href="/about"><i class="icon-info-circle"></i>About Us</a></li>
-                            <li><a href="/contact"><i class="icon-envelope"></i>Contact Us</a></li>
+                            <!-- <li><a href="/contact"><i class="icon-envelope"></i>Contact Us</a></li> -->
                             
                             <% console.log("Current user in EJS:", user); %> <!-- Add this line for debugging -->
                             <% if (!user) { %> 
@@ -70,10 +70,10 @@
             <li>
                 <a href="/" class="p-5">Home</a>
             </li>
-            <li class="category-container">
+            <!-- <li class="category-container">
                 <a href="/category" class="p-5">Category</a>
               
-            </li>
+            </li> -->
             
             
             <li>
